--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="col-md-4">
         <h1 class="text-center mb-4">Mieke Nel - CV</h1>
         <br>
-        <img src="Mieke Photo.jpg" class="img-fluid rounded-circle" alt="Profile Image" style="max-width: 150px">
+        
+        #<img src="Mieke Photo.jpg" class="img-fluid rounded-circle" alt="Profile Image" style="max-width: 150px">
       </div>
       <div class="col-md-8">
 
